--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "blog1",
     "version": "1.0.0",
     "description": "",
-    "main": "index.js",
+    "main": "app.js",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
         "start": "node app.js"
@@ -12,7 +12,6 @@
     "engines": {
         "node": "14.15.4"
     },
-
     "dependencies": {
         "alert": "^5.0.10",
         "body-parser": "^1.19.0",
